🦄 refactor: 拆分基础库

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"Lua.workspace.library": [
+		"scripts/lua/meta/base-type.lua",
 		"scripts/lua/meta/nest-types.lua",
 		"scripts/lua/meta/vue-type.lua"
 	]
