--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"@biuxiu/template": "^1.2.3",
 		"module-alias": "^2.2.3",
 		"prettier": "^3.3.2",
-		"shelljs": "^0.8.5"
+		"shelljs": "^0.8.5",
+		"ts-morph": "^22.0.0"
 	}
 }
-
