🐞 fix: 添加发布文件

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"publish:x": "xiu -o -c -h 'npm run build:script' -n"
 	},
 	"files": [
-		"bin",
+		"lua/bin",
 		"dist",
 		"pkg",
 		"sources",
