--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 	"files": [
 		"lua/bin",
 		"dist",
-		"pkg",
+		"pkg/lua_codegen_bg.wasm",
+		"pkg/lua_codegen.d.ts",
+		"pkg/lua_codegen.js",
 		"sources",
 		"README.md"
 	],
