--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@biuxiu/publish": "^1.2.11",
+		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^20.14.2",
 		"@types/shelljs": "^0.8.15",
 		"esbuild": "^0.21.5",
@@ -29,6 +30,7 @@
 	},
 	"dependencies": {
 		"@biuxiu/template": "^1.5.2",
+		"better-sqlite3": "^11.1.2",
 		"prettier": "^3.3.2",
 		"ts-morph": "^22.0.0"
 	}
