🦄 refactor: 重新设置路径别名

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,14 @@
 		"moduleResolution": "node",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["src/*"]
+			"@libs": [
+				"src/libs"
+			]
 		}
 	},
-	"include": ["btpl-env.d.ts", "src", "scripts"]
+	"include": [
+		"btpl-env.d.ts",
+		"src",
+		"scripts"
+	]
 }
-
