--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
 		"tsx": "^4.15.1",
 		"typescript": "^5.4.5"
 	},
+	"peerDependencies": {
+		"better-sqlite3": "^11.1.2"
+	},
 	"dependencies": {
 		"@biuxiu/template": "^1.5.2",
-		"better-sqlite3": "^11.1.2",
 		"prettier": "^3.3.2",
 		"ts-morph": "^22.0.0"
 	}
